ODAEU-24 Added summary columns and Key Indicators section

--- a/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/dac1/dac1_template.jrxml
+++ b/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/dac1/dac1_template.jrxml
@@ -268,28 +268,28 @@ commitments]]></text>
 				<reportElement x="263" y="0" width="1" height="64" uuid="8932f562-7b14-427e-b0fa-0618ab64014b"/>
 			</line>
 			<staticText>
-				<reportElement x="264" y="1" width="35" height="16" uuid="e7d1edd6-c309-4d47-975f-6a8d9dd5dd87"/>
+				<reportElement key="row_001" x="264" y="1" width="35" height="16" uuid="e7d1edd6-c309-4d47-975f-6a8d9dd5dd87"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="10"/>
 				</textElement>
 				<text><![CDATA[001]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="264" y="33" width="35" height="16" uuid="4c128394-294f-49cd-a960-887e3d0d10d8"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="10"/>
-				</textElement>
-				<text><![CDATA[003]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="264" y="17" width="35" height="16" uuid="f26cfdcb-be8d-4354-b859-530c3b911301"/>
+				<reportElement key="row_002" x="264" y="17" width="35" height="16" uuid="f26cfdcb-be8d-4354-b859-530c3b911301"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="10"/>
 				</textElement>
 				<text><![CDATA[002]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="264" y="49" width="35" height="16" uuid="26e95a2e-95fa-4582-938c-f87c0a8311c4"/>
+				<reportElement key="row_003" x="264" y="33" width="35" height="16" uuid="4c128394-294f-49cd-a960-887e3d0d10d8"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="10"/>
+				</textElement>
+				<text><![CDATA[003]]></text>
+			</staticText>
+			<staticText>
+				<reportElement key="row_004" x="264" y="49" width="35" height="16" uuid="26e95a2e-95fa-4582-938c-f87c0a8311c4"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="10"/>
 				</textElement>
