--- a/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/aq/aq_master.jrxml
+++ b/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/aq/aq_master.jrxml
@@ -17,7 +17,10 @@ MEMBER [Reporting Year].[Second Year] AS [Reporting Year].[$P{SECOND_YEAR}]
 SELECT
 {[Reporting Year].[First Year], [Reporting Year].[Second Year]} ON ROWS,
 {[Measures].[Net Amount Currency NATLOECD], [Measures].[Exchange Rate]} ON COLUMNS
-FROM [Financial]]]>
+FROM [Financial]
+WHERE {[Form Type].[bilateralOda.advanceQuestionnaire], [Form Type].[multilateralOda.advanceQuestionnaire]}
+
+]]>
     </queryString>
     <field name="Extended Amount Year 1" class="java.lang.Number">
         <fieldDescription><![CDATA[Data([Measures].[Net Amount Currency NATLOECD], [Reporting Year].[First Year])]]></fieldDescription>
