--- a/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/aq/aq_master_multilateral_org.jrxml
+++ b/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/aq/aq_master_multilateral_org.jrxml
@@ -20,7 +20,8 @@ SELECT
 {[Channel].[UNGroup], [Channel].[EUGroup], [Channel].[WBGroup], [Channel].[RBGroup], [Channel].[OtherGroup], [Channel].[AllCodes]} ON ROWS,
 {[Measures].[First Year], [Measures].[Second Year]} ON COLUMNS
 FROM [Financial]
-WHERE {[BiMultilateral].[BI_MULTILATERAL##2]}]]>
+WHERE {[BiMultilateral].[BI_MULTILATERAL##2]}*{[Form Type].[bilateralOda.advanceQuestionnaire], [Form Type].[multilateralOda.advanceQuestionnaire] }
+]]>
 	</queryString>
 	<field name="United Nations Y1" class="java.lang.Number">
 		<fieldDescription><![CDATA[Data([Measures].[First Year], [Channel].[UNGroup])]]></fieldDescription>
