--- a/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/dac1/dac1_template.jrxml
+++ b/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/dac1/dac1_template.jrxml
@@ -328,14 +328,14 @@ commitments]]></text>
 				<text><![CDATA[005]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="264" y="16" width="35" height="16" uuid="7f5da652-f7c6-4d01-bb6b-2cdf06636779"/>
+				<reportElement key="row_1010" x="264" y="16" width="35" height="16" uuid="7f5da652-f7c6-4d01-bb6b-2cdf06636779"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="10"/>
 				</textElement>
 				<text><![CDATA[1010]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="264" y="32" width="35" height="32" uuid="a5b13412-583d-44ae-914f-1f66cea405da"/>
+				<reportElement key="row_1015" x="264" y="32" width="35" height="32" uuid="a5b13412-583d-44ae-914f-1f66cea405da"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="10"/>
 				</textElement>
@@ -349,7 +349,7 @@ commitments]]></text>
 				<text><![CDATA[1.  Budget support]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="264" y="64" width="35" height="15" uuid="86395132-0d9f-4487-ba85-9ddd2bca800b"/>
+				<reportElement key="row_1100" x="264" y="64" width="35" height="15" uuid="86395132-0d9f-4487-ba85-9ddd2bca800b"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="10"/>
 				</textElement>
