--- a/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/dac1/dac1_template.jrxml
+++ b/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/dac1/dac1_template.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="dac1_master" pageWidth="900" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="860" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" resourceBundle="i18n" uuid="bad8772b-9ff8-49ae-a2c0-34a59258237b">
-	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="1629"/>
+	<property name="ireport.zoom" value="2.0"/>
+	<property name="ireport.x" value="535"/>
+	<property name="ireport.y" value="0"/>
 	<parameter name="REPORTING_COUNTRY" class="java.lang.String"/>
 	<parameter name="REPORTING_YEAR" class="java.lang.Number"/>
 	<queryString language="mdx">
@@ -12,33 +12,68 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="113" splitType="Stretch">
+		<band height="64" splitType="Stretch">
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement x="10" y="11" width="397" height="32" uuid="9d08b850-c5b4-4a5b-8600-900de3d6d321"/>
+				<reportElement x="0" y="0" width="641" height="16" uuid="9d08b850-c5b4-4a5b-8600-900de3d6d321"/>
 				<textElement verticalAlignment="Top" markup="styled">
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$R{dac1.title}]]></textFieldExpression>
 			</textField>
-			<staticText>
-				<reportElement x="613" y="53" width="123" height="48" uuid="0ec0336c-7bad-4791-98a5-750066188036"/>
-				<textElement textAlignment="Right">
-					<font size="12" isBold="false" isItalic="false"/>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement x="0" y="16" width="641" height="16" uuid="9d08b850-c5b4-4a5b-8600-900de3d6d321"/>
+				<textElement verticalAlignment="Top" markup="styled">
+					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Reporting country:
-Period:
-Date:]]></text>
+				<textFieldExpression><![CDATA[$R{dac1.subtitle}]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement x="0" y="32" width="641" height="16" uuid="9d08b850-c5b4-4a5b-8600-900de3d6d321"/>
+				<textElement verticalAlignment="Top" markup="styled">
+					<font fontName="Arial" size="12" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA["2014 Edition"]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="641" y="0" width="120" height="16" uuid="0ec0336c-7bad-4791-98a5-750066188036"/>
+				<textElement textAlignment="Right">
+					<font fontName="Arial" size="12" isBold="false" isItalic="false"/>
+				</textElement>
+				<text><![CDATA[Reporting country:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="641" y="16" width="120" height="16" uuid="0ec0336c-7bad-4791-98a5-750066188036"/>
+				<textElement textAlignment="Right">
+					<font fontName="Arial" size="12" isBold="false" isItalic="false"/>
+				</textElement>
+				<text><![CDATA[Period:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="641" y="32" width="120" height="16" uuid="0ec0336c-7bad-4791-98a5-750066188036"/>
+				<textElement textAlignment="Right">
+					<font fontName="Arial" size="12" isBold="false" isItalic="false"/>
+				</textElement>
+				<text><![CDATA[Date:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="749" y="53" width="100" height="16" uuid="40fea317-1efb-41ef-a2ab-7b7ca5290ce6"/>
+				<reportElement x="761" y="0" width="100" height="16" uuid="40fea317-1efb-41ef-a2ab-7b7ca5290ce6"/>
+				<textElement>
+					<font fontName="Arial" size="12"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$P{REPORTING_COUNTRY}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="749" y="69" width="100" height="16" uuid="130e2419-c5b7-429b-9a97-10e45bef654c"/>
+				<reportElement x="761" y="16" width="100" height="16" uuid="130e2419-c5b7-429b-9a97-10e45bef654c"/>
+				<textElement>
+					<font fontName="Arial" size="12"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$P{REPORTING_YEAR}]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy" isBlankWhenNull="false">
-				<reportElement x="749" y="85" width="100" height="16" uuid="e2a1d4f1-07b3-430e-adf1-6ddcd3916374"/>
+				<reportElement x="761" y="32" width="100" height="16" uuid="e2a1d4f1-07b3-430e-adf1-6ddcd3916374"/>
+				<textElement>
+					<font fontName="Arial" size="12"/>
+				</textElement>
 				<textFieldExpression><![CDATA[new Date()]]></textFieldExpression>
 			</textField>
 		</band>
