ODAEU-240 Corrected wrong codes. Added columns that use Interest.

--- a/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/dac2a/dac2a_template_area.jrxml
+++ b/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/dac2a/dac2a_template_area.jrxml
@@ -133,6 +133,20 @@
 				<text><![CDATA[216]]></text>
 			</staticText>
 			<staticText>
+				<reportElement key="r_209a" x="1242" y="0" width="0" height="0" uuid="eec6223f-ec4f-47d9-bfe7-cf1c21f0e059"/>
+				<textElement textAlignment="Center">
+					<font size="10" isBold="false" isUnderline="false"/>
+				</textElement>
+				<text><![CDATA[209]]></text>
+			</staticText>
+			<staticText>
+				<reportElement key="r_209b" x="1242" y="0" width="0" height="0" uuid="eec6223f-ec4f-47d9-bfe7-cf1c21f0e059"/>
+				<textElement textAlignment="Center">
+					<font size="10" isBold="false" isUnderline="false"/>
+				</textElement>
+				<text><![CDATA[209]]></text>
+			</staticText>
+			<staticText>
 				<reportElement key="r_209" x="1242" y="0" width="59" height="0" uuid="eec6223f-ec4f-47d9-bfe7-cf1c21f0e059"/>
 				<textElement textAlignment="Center">
 					<font size="10" isBold="false" isUnderline="false"/>
