--- a/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/dac1/dac1_template.jrxml
+++ b/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/dac1/dac1_template.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="dac1_master" pageWidth="900" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="860" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" resourceBundle="i18n" uuid="bad8772b-9ff8-49ae-a2c0-34a59258237b">
 	<property name="ireport.zoom" value="3.0"/>
-	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="3821"/>
+	<property name="ireport.x" value="856"/>
+	<property name="ireport.y" value="396"/>
 	<style name="defaultStyle" isDefault="true" mode="Transparent" fontName="Arial" fontSize="8"/>
 	<style name="BlueBackground" style="defaultStyle" mode="Opaque" backcolor="#99CCFF" isBold="true"/>
 	<parameter name="REPORTING_COUNTRY" class="java.lang.String"/>
@@ -85,6 +85,14 @@
 	<pageHeader>
 		<band height="99">
 			<staticText>
+				<reportElement x="502" y="42" width="64" height="57" uuid="f07a9463-f40b-49e8-bf4b-ae780b415348"/>
+				<textElement textAlignment="Center"/>
+				<text><![CDATA[Amount
+received
+(-)
+Non grants]]></text>
+			</staticText>
+			<staticText>
 				<reportElement x="701" y="1" width="117" height="19" uuid="c900fedd-e119-4a70-ba6f-80d3de1df5f0"/>
 				<textElement>
 					<font size="10" isBold="true" isUnderline="true"/>
@@ -157,7 +165,7 @@
 			<staticText>
 				<reportElement x="297" y="70" width="65" height="16" uuid="e6aab14e-bd34-4219-ac2f-1f7d1dfca942"/>
 				<textElement textAlignment="Center"/>
-				<text><![CDATA[Grants ]]></text>
+				<text><![CDATA[Grants]]></text>
 			</staticText>
 			<staticText>
 				<reportElement style="BlueBackground" x="428" y="60" width="73" height="39" uuid="d98167a4-4bc1-416f-ab43-b47c4cb98d9a"/>
@@ -172,14 +180,6 @@ extended]]></text>
 				<reportElement x="362" y="70" width="65" height="16" uuid="f1b5e343-e8a5-4bb0-84fe-1ff6922cf5c6"/>
 				<textElement textAlignment="Center"/>
 				<text><![CDATA[Non grants]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="502" y="42" width="64" height="57" uuid="f07a9463-f40b-49e8-bf4b-ae780b415348"/>
-				<textElement textAlignment="Center"/>
-				<text><![CDATA[Amount
-received
-(-)
-Non grants]]></text>
 			</staticText>
 			<staticText>
 				<reportElement style="BlueBackground" x="567" y="40" width="75" height="59" uuid="7fd5b727-c68c-406a-b050-3cf1c11f5a1a"/>
@@ -213,7 +213,7 @@ AMOUNTS]]></text>
 			<staticText>
 				<reportElement x="643" y="66" width="64" height="16" uuid="6899d318-d8a8-4170-9571-4925096f8bae"/>
 				<textElement textAlignment="Center"/>
-				<text><![CDATA[Grants ]]></text>
+				<text><![CDATA[Grants]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="707" y="66" width="65" height="16" uuid="3226e97f-8801-4109-9506-52e10ca2942a"/>
@@ -243,6 +243,27 @@ commitments]]></text>
 			<line>
 				<reportElement x="772" y="24" width="1" height="75" uuid="94501086-0e92-470b-95c4-e12fae3e5dc3"/>
 			</line>
+			<staticText>
+				<reportElement x="688" y="59" width="10" height="7" uuid="f4a8b317-9a94-433d-acd1-e2e344aa3ea9"/>
+				<textElement>
+					<font size="5"/>
+				</textElement>
+				<text><![CDATA[(1)]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="345" y="63" width="17" height="7" uuid="739c23e9-c7a9-484c-a59b-d41073067c4c"/>
+				<textElement>
+					<font size="5"/>
+				</textElement>
+				<text><![CDATA[(1)]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="555" y="63" width="10" height="7" uuid="9778bdf8-d42b-490f-9f29-8f62b3dbe7d6"/>
+				<textElement>
+					<font size="5"/>
+				</textElement>
+				<text><![CDATA[(2)]]></text>
+			</staticText>
 		</band>
 	</pageHeader>
 	<detail>
@@ -1682,7 +1703,7 @@ commitments]]></text>
 				<text><![CDATA[102]]></text>
 			</staticText>
 		</band>
-		<band height="348">
+		<band height="387">
 			<staticText>
 				<reportElement x="0" y="0" width="263" height="12" uuid="78ed5698-7dcc-4d03-8ad8-cb7e7e4ece7d"/>
 				<textElement>
@@ -2033,6 +2054,14 @@ commitments]]></text>
 				</subreportParameter>
 				<subreportExpression><![CDATA[$P{INTEREST_SUBREPORT_PATH}]]></subreportExpression>
 			</subreport>
+			<staticText>
+				<reportElement x="1" y="358" width="426" height="29" uuid="0c931ac9-5463-40d2-830e-ecc1f7da3e91"/>
+				<textElement>
+					<font size="8" isBold="false"/>
+				</textElement>
+				<text><![CDATA[(1) Also includes capital subscriptions to multilateral agencies.
+(2) Also includes total recoveries on grants and capital subscriptions (codes 1900 and 2110).]]></text>
+			</staticText>
 		</band>
 	</detail>
 </jasperReport>
