--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/desktop/components/TransactionTableListPanel.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/desktop/components/TransactionTableListPanel.html
@@ -15,6 +15,7 @@
         	<thead>
 	           <tr>
 	               <th><span wicket:id="transaction-name-label">Transaction name</span></th>
+	               <th><span wicket:id="transaction-form-type-label">Form Type</span></th> 
 	               <th><span wicket:id="transaction-reporting-year-label">Reporting Year</span></th>
 	               <th><span wicket:id="transaction-sector-name-label">Sector name</span></th>
 	               <th><span wicket:id="transaction-organization-name-label">Organization name</span></th>
@@ -24,6 +25,9 @@
 			<tr wicket:id="transaction-list">
 				<td>
 					<span wicket:id="transaction-name">-1</span>
+				</td>
+				<td>
+					<span wicket:id="transaction-form-type">type</span>
 				</td>
 				<td>
 					<span wicket:id="transaction-reporting-year">0</span>
