--- a/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/dac2a/dac2a_template_area.jrxml
+++ b/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/dac2a/dac2a_template_area.jrxml
@@ -2,7 +2,8 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="dac2a_template_area" pageWidth="1350" pageHeight="612" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="1350" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" resourceBundle="i18n" uuid="bad8772b-9ff8-49ae-a2c0-34a59258237b">
 	<property name="ireport.zoom" value="2.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="5047"/>
+	<property name="ireport.y" value="4870"/>
+	<style name="defaultStyle" isDefault="true" mode="Transparent" fontName="Arial" fontSize="10"/>
 	<parameter name="REPORTING_COUNTRY" class="java.lang.String"/>
 	<parameter name="REPORTING_YEAR" class="java.lang.Number"/>
 	<queryString language="mdx">
@@ -12,7 +13,7 @@
 		<band splitType="Stretch"/>
 	</background>
 	<detail>
-		<band height="211" splitType="Stretch">
+		<band height="200" splitType="Stretch">
 			<staticText>
 				<reportElement key="r_201" x="251" y="0" width="55" height="0" uuid="e3a4569b-8152-4065-9f63-8b8c1b7cd1f7"/>
 				<textElement textAlignment="Center">
@@ -336,7 +337,7 @@
 				<text><![CDATA[089]]></text>
 			</staticText>
 		</band>
-		<band height="136" splitType="Stretch">
+		<band height="126" splitType="Stretch">
 			<staticText>
 				<reportElement x="0" y="0" width="203" height="20" uuid="0074b881-1c09-4ec5-902f-2396bb4c8541"/>
 				<textElement>
@@ -872,7 +873,7 @@
 				<text><![CDATA[256]]></text>
 			</staticText>
 		</band>
-		<band height="357" splitType="Stretch">
+		<band height="347" splitType="Stretch">
 			<staticText>
 				<reportElement x="10" y="0" width="193" height="15" uuid="48e5c6dd-8e95-4956-8247-bbceb62ef5ff"/>
 				<textElement>
@@ -1196,7 +1197,7 @@
 				<text><![CDATA[289]]></text>
 			</staticText>
 		</band>
-		<band height="375" splitType="Stretch">
+		<band height="371" splitType="Stretch">
 			<staticText>
 				<reportElement x="0" y="0" width="203" height="20" uuid="0074b881-1c09-4ec5-902f-2396bb4c8541"/>
 				<textElement>
@@ -1534,7 +1535,7 @@
 				<text><![CDATA[389]]></text>
 			</staticText>
 		</band>
-		<band height="236" splitType="Stretch">
+		<band height="225" splitType="Stretch">
 			<staticText>
 				<reportElement x="0" y="0" width="203" height="15" uuid="0074b881-1c09-4ec5-902f-2396bb4c8541"/>
 				<textElement>
@@ -1888,7 +1889,7 @@
 				<text><![CDATA[589]]></text>
 			</staticText>
 		</band>
-		<band height="336" splitType="Stretch">
+		<band height="315" splitType="Stretch">
 			<staticText>
 				<reportElement x="0" y="0" width="203" height="15" uuid="0074b881-1c09-4ec5-902f-2396bb4c8541"/>
 				<textElement>
@@ -2184,7 +2185,7 @@
 				<text><![CDATA[689]]></text>
 			</staticText>
 		</band>
-		<band height="226" splitType="Stretch">
+		<band height="211" splitType="Stretch">
 			<staticText>
 				<reportElement x="0" y="0" width="203" height="15" uuid="0074b881-1c09-4ec5-902f-2396bb4c8541"/>
 				<textElement>
@@ -2382,7 +2383,7 @@
 				<text><![CDATA[798]]></text>
 			</staticText>
 		</band>
-		<band height="285" splitType="Stretch">
+		<band height="278" splitType="Stretch">
 			<staticText>
 				<reportElement x="0" y="0" width="203" height="20" uuid="0074b881-1c09-4ec5-902f-2396bb4c8541"/>
 				<textElement>
