Added oda@glance legend. (ODAEU-234)

--- a/eudevfin/reports-ui/src/main/webapp/css/style.css
+++ b/eudevfin/reports-ui/src/main/webapp/css/style.css
@@ -12,6 +12,10 @@ img {
     background-color: #ffffff;
 }
 
+.oda-legend {
+    float: right;
+}
+
 /************************* Tables *************************/
 
 .dataTables_wrapper {
