ODAEU-163 - transaction viewer - commit #1

--- a/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/components/AbstractField.html
+++ b/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/components/AbstractField.html
@@ -15,10 +15,11 @@
 <wicket:panel>
     <div wicket:id="control-group">
         <div wicket:id="xPenderController">
-            <span class="add-on" wicket:id="prepender"/>
-            <wicket:child/>
+            <span class="add-on" wicket:id="prepender"/>            
+            <wicket:child/>			
             <span class="add-on" wicket:id="appender"/>
         </div>
+        <span wicket:id="readOnlyComponent"/>
     </div>
 </wicket:panel>
 </body>
