--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/desktop/components/TransactionTableListPanel.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/desktop/components/TransactionTableListPanel.html
@@ -39,7 +39,8 @@
 					<span wicket:id="transaction-organization-name">unspecified</span>
 				</td>
 				<td>
-					<a wicket:id="transaction-edit-link"><span wicket:id="transaction-edit-link-label">Edit</span></a>
+					<a wicket:id="transaction-view-link"><span wicket:id="transaction-view-link-label">View</span></a><br/>
+					<a wicket:id="transaction-edit-link"><span wicket:id="transaction-edit-link-label">Edit</span></a>				
 				</td>
 			</tr>
 </wicket:extend>
