--- a/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/components/tabs/PreviewTabbedPannel.html
+++ b/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/components/tabs/PreviewTabbedPannel.html
@@ -9,15 +9,14 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
 <body>
-<wicket:extend>
-    <div class="span4" wicket:id="otherMarkersContainer">
-        <h4>
-            <wicket:message key="otherMarkers.label"/>
-        </h4>
-        <div class="row">
-            <div wicket:id="96rmnch"/>
-        </div>
+<wicket:panel>
+    <div wicket:id="content" class="tabbable">
+            <span wicket:id="tabNames">            
+            	<h3><span wicket:id="tabNamesLink">Section 1</span></h3>      
+            	<div wicket:id="tabContentPanel"/>      
+            </span>
+        
     </div>
-</wicket:extend>
+</wicket:panel>
 </body>
 </html>
